# glico-sunao-backend

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/: CODEOWNERS
.github/workflows/: CI.yml  auto-assign-author.yml  deploy-dev.yml  deploy-stg.yml  test.yml
docs/architecture/: dev.pptx  アーキテクチャ図.pptx  アーキテクチャ図2.pptx
env/: dev.yml  local.yml  stg.yml  test.yml
sandbox/BGLdata/: get-BGLData.py  get-Hba1cData.py  get-data.py  post-BGLData.py  post-Hba1cData.py
sandbox/user/: main.py
src/v1/aws/: s3_client.py
src/v1/config/: api.py
src/v1/controllers/: bgl.py  bgl_and_hba1c.py  hba1c.py  user.py
src/v1/database/: base.py  base_Hba1c.py
src/v1/handlers/: app.py  app_hba1c.py
src/v1/helper/: generator.py
src/v1/middlewares/: common.py
src/v1/models/: Hba1c.py  bgl.py  hba1c.py
src/v1/repositories/: bgl_repository.py  hba1c.py  hba1c_repository.py  user_repository.py
src/v1/routes/: Hba1c.py  bgl.py  bgl_and_hba1c.py  hba1c.py  user.py
src/v1/schemas/: base.py  bgl.py  bgl_and_hba1c.py  errors.py  event_timing.py  hba1c.py  log_schema.py  sunao_foods.py  user.py
src/v1/services/: bgl_and_hba1c_service.py  bgl_service.py  hba1c_service.py  user_service.py
tests/test_e2e/: cprint.py  test_api.py
tests/test_e2e/tag/: BGL.py  Hba1c.py  User.py
tests/test_v1/: test_hba1c.py
tests/test_v1/test_config/: test_api.py
