[tool.poetry]
name = "glico-sunao-backend"
version = "0.1.0"
description = ""
authors = ["Takahashi Katsuyuki <takahashi.k@world-wing.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.6"
aws-lambda-powertools = { extras = ["tracer"], version = "^2.31.0" }
pydantic = "^2.5.3"
jmespath = "^1.0.1"
aws-xray-sdk = "^2.12.1"
pynamodb = "^6.0.0"
pynamodb-attributes = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.3.2"
mypy = "^1.9.0"
taskipy = "^1.12.2"
boto3 = "^1.34.61"
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
faker = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
test = "pytest -s -vv --cov=. --cov-branch --cov-report=html"
format = "task format-black && task format-isort"
format-black = "black src tests"
format-isort = "isort src tests"
lint = "task lint-black && task lint-ruff && task lint-mypy"
lint-ruff = "ruff check src tests"
lint-mypy = "mypy src tests"
lint-black = "black --check src tests"


# NOTE: Pytest configurations
[tool.pytest.ini_options]
pythonpath = "src/v1"
testpaths = ["tests"]


# NOTE: Black configurations
[tool.black]
line-length = 100


# NOTE: Isort configurations
# LINK - https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
[tool.isort]
profile = "black"
line_length = 100
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Library"
import_heading_firstparty = "First Party Library"
import_heading_localfolder = "Local Library"
multi_line_output = 3
include_trailing_comma = true

# NOTE: Mypy configurations
# LINK - https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
# Prefixes each error with the relevant context.
show_error_context = true
# Shows column numbers in error messages.
show_column_numbers = true
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = true
# Disallows defining functions without type annotations or with incomplete type annotations (a superset of disallow_incomplete_defs)
disallow_untyped_defs = true
# Shows a warning when returning a value with type Any from a function declared with a non- Any return type.
warn_return_any = true
# Shows a warning when encountering any code inferred to be unreachable or redundant after performing type analysis.
warn_unreachable = true
# Warns about unneeded # type: ignore comments.
warn_unused_ignores = true
# Warns about casting an expression to its inferred type.
warn_redundant_casts = true


# NOTE: Ruff configurations
[tool.ruff]
exclude = [".venv", "__pycache__", ".git"]
line-length = 100
indent-width = 4
